examples/test/testpolicy9864.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9864
  namespace: namespace89
spec:
  podSelector:
    matchLabels:
      key43: value9
      key39: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value1
          key42: value41
          key34: value35
      podSelector:
        matchLabels:
          key31: value27
